# offiine_video_library

./: .gitignore  HOME_NETWORK_GUIDE.md  README.md  SETUP_GUIDE.md  pyproject.toml
scripts/: breathwork.service  com.breathwork.app.plist  install.sh  uninstall.sh  update.sh
src/breathwork/: config.py  database.py  main.py  models.py  schemas.py
src/breathwork/routers/: downloads.py  system.py  videos.py
src/breathwork/services/: downloader.py
src/breathwork/static/css/: app.css
src/breathwork/static/css/themes/: breathwork.css  classy.css  cyberpunk.css
src/breathwork/static/js/: api.js  app.js
src/breathwork/static/js/themes/: breathwork.js  classy.js  cyberpunk.js
src/breathwork/templates/: index.html
src/breathwork/themes/: __init__.py  breathwork.py  classy.py  cyberpunk.py
